# nwnrs

./: .dockerignore  .gitignore  CODE_OF_CONDUCT  Cargo.toml  EVENTS.md  NWSCRIPT_EXTENSIONS.md  README.md  SECURITY.md  book.toml  clippy.toml  deny.toml  package-lock.json  package.json  release-plz.toml  rust-toolchain.toml  rustfmt.toml  tsconfig.base.json
bevy/: Cargo.toml  PROJECT_PLAN.md
bevy/assets/: test.mdl
bevy/examples/: find_install_model.rs  find_install_resource.rs  inspect_gff.rs  inspect_model.rs  inspect_palette.rs  inspect_twoda.rs  load_keys.rs  static_model.rs  test_area.rs
bevy/src/: animation.rs  appearance.rs  assets.rs  convert.rs  error.rs  install.rs  install_state.rs  lib.rs  light.rs  loader.rs  plugin.rs  runtime.rs  spawn.rs  txi.rs  visibility.rs
cli/: Cargo.toml  README.md
cli/src/: args.rs  compile.rs  convert.rs  inspect.rs  logging.rs  main.rs  mdl.rs  metadata.rs  nwsync.rs  pack.rs  package.rs  unpack.rs  util.rs
crates/dds/: Cargo.toml  README.md
crates/dds/src/: lib.rs
crates/erf/: Cargo.toml
crates/erf/src/: io.rs  lib.rs  types.rs
crates/game/: Cargo.toml
crates/game/src/: builder.rs  discovery.rs  keyload.rs  lib.rs  types.rs
crates/gffjson/: Cargo.toml
crates/gffjson/src/: decode.rs  encode.rs  lib.rs  types.rs
crates/key/: Cargo.toml
crates/key/src/: io.rs  lib.rs  types.rs
crates/mdl/: Cargo.toml
crates/mdl/src/: lib.rs  resolve.rs  scene.rs  semantic.rs
crates/mtr/: Cargo.toml
crates/mtr/src/: lib.rs
crates/nwnrs/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/nwnrs/src/: args.rs  compile.rs  container.rs  convert.rs  expand.rs  inspect.rs  lib.rs  logging.rs  main.rs  nwsync.rs  pack.rs  package.rs  project.rs  run.rs  symbols.rs  unpack.rs  util.rs
crates/nwnrs/tests/: compile_json.rs
crates/nwpkg/: CHANGELOG.md  Cargo.toml  README.md
crates/nwpkg/macros/: nwnrs_macros.nss
crates/nwpkg/src/: dependency.rs  fs.rs  generation.rs  kind.rs  lib.rs  lock.rs  manifest.rs
crates/nwscript/: CHANGELOG.md  Cargo.toml  README.md
crates/nwscript/src/: analysis.rs  ast.rs  cancel.rs  codegen.rs  diag.rs  driver.rs  float_literal.rs  graphviz.rs  hir.rs  int_literal.rs  ir.rs  langspec.rs  lexer.rs  lib.rs  macro_expansion.rs  ncs.rs  ndb.rs  nwasm.rs  opt.rs  parser.rs  preprocess.rs  script_string.rs  sema.rs  session.rs  source.rs  token.rs  vm.rs
crates/nwscript/tests/: langspec_audit.rs  nss_smoke.rs
crates/nwscript/tests/support/: mod.rs
crates/nwsync/: Cargo.toml
crates/nwsync/src/: io.rs  lib.rs  types.rs
crates/plt/: Cargo.toml  README.md
crates/plt/src/: lib.rs
crates/prelude/: Cargo.toml
crates/prelude/src/: lib.rs
crates/renderer/: Cargo.toml  README.md
crates/renderer/src/: assets.rs  dependency.rs  error.rs  lib.rs  loader.rs  packet.rs  scene.rs
crates/resdir/: Cargo.toml
crates/resdir/src/: lib.rs  read.rs  types.rs
crates/resfile/: Cargo.toml
crates/resfile/src/: lib.rs  read.rs  types.rs
crates/resfile/tests/unit/: mod.rs
crates/resman/: Cargo.toml
crates/resman/src/: lib.rs  manager.rs  types.rs
crates/resnwsync/: Cargo.toml
crates/resnwsync/src/: io.rs  lib.rs  types.rs
crates/runtime/: ABI.md  Cargo.toml  README.md
crates/runtime-sys/: Cargo.toml  README.md  build.rs
crates/runtime-sys/examples/: frida-probe.rs  write-fixture-target-pack.rs
crates/runtime-sys/native/: exo_string.cpp
crates/runtime-sys/scripts/: test-native-runtime.ps1  test-native-runtime.sh
crates/runtime-sys/src/: adapter.rs  bridge.rs  lib.rs  windows_launcher.rs  windows_theme.rs
crates/runtime-sys/src/engine/: abi.rs  address.rs  administration.rs  event.rs  hook.rs  mod.rs  server.rs  string.rs  thread.rs  vm.rs
crates/runtime-sys/src/engine/events/: associate.rs  dispatch.rs  feat.rs  (+9 more)
crates/runtime-sys/tests/fixtures/: administration.cpp  host.rs  windows-exports.def  windows_theme.rs
crates/runtime/abi/: abi-probe.cpp
crates/runtime/abi/evidence/: windows-x86_64-98951511ae7d06a251355f12d4f3e4b96269a2414fa3058e641afd70098690f6.md
crates/runtime/examples/: verify-unified-abi.rs  write-fixture-target-pack.rs
crates/runtime/fixtures/: host.rs
crates/runtime/scripts/: test-native-runtime.sh  verify-unified-abi.ps1  verify-unified-abi.sh
crates/runtime/src/: bridge.rs  event_catalog.rs  identity.rs  lib.rs  platform.rs
crates/runtime/src/bridge/: error.rs  host.rs  mod.rs  value.rs
crates/runtime/targets/: README.md
crates/tga/: Cargo.toml  README.md
crates/tga/src/: lib.rs
crates/tlk/: Cargo.toml
crates/tlk/src/: io.rs  lib.rs  types.rs
crates/txi/: Cargo.toml
crates/txi/src/: lib.rs
crates/types/: CHANGELOG.md  Cargo.toml  README.md
crates/types/src/: lib.rs
crates/types/src/checksums/: README.md  digest.rs  mod.rs  types.rs
crates/types/src/dds/: mod.rs
crates/types/src/encoding/: api.rs
crates/types/src/erf/: io.rs
crates/types/src/gff/: area.rs  git.rs  mod.rs  types.rs
crates/types/src/install/: README.md  builder.rs  discovery.rs
crates/types/src/key/: io.rs  mod.rs  types.rs
crates/types/src/localization/: mod.rs  types.rs
crates/types/src/mdl/: README.md  animation.rs  ascii.rs  binary.rs  compose.rs  mod.rs  obj.rs  pose.rs  resolve.rs  resource.rs  scene.rs  semantic.rs
crates/types/src/nwsync/: io.rs  mod.rs  repository_io.rs  repository_types.rs  types.rs
crates/types/src/plt/: mod.rs
crates/types/src/resman/: manager.rs  read.rs  resref_types.rs  types.rs
crates/types/src/scene/: README.md  assets.rs  error.rs  inspection.rs  loader.rs  mod.rs  packet.rs  types.rs
crates/types/src/tga/: mod.rs
crates/types/src/tlk/: types.rs
crates/types/tests/: mdl_ascii.rs  mdl_binary.rs  mdl_scene.rs  mdl_semantic.rs
crates/types/tests/mdl/: scene.rs
crates/util/: Cargo.toml
crates/util/src/: encoding.rs  errors.rs  io.rs  lib.rs  testing.rs
crates/vscode-native/: Cargo.toml  build.rs
crates/vscode-native/src/: lib.rs  resource_editor.rs  viewer.rs
wasm/: Cargo.toml  README.md
wasm/src/: bindings.rs  erf.rs  gff.rs  lib.rs  lossless.rs  mdl.rs  ssf.rs  tlk.rs  twoda.rs
(+449 files in other folders)
