[workspace]
default-members = ["cli"]
members = ["bevy", "cli", "crates/*", "wasm"]
exclude = ["crates/texture"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false
license = "GPL-3.0-only"

[workspace.dependencies]
# internal dependencies
nwnrs = { path = "crates/prelude" }
nwnrs-checksums = { path = "crates/checksums" }
nwnrs-compressedbuf = { path = "crates/compressedbuf" }
nwnrs-core = { path = "crates/core" }
nwnrs-dds = { path = "crates/dds" }
nwnrs-erf = { path = "crates/erf" }
nwnrs-exo = { path = "crates/exo" }
nwnrs-game = { path = "crates/game" }
nwnrs-gff = { path = "crates/gff" }
nwnrs-git = { path = "crates/git" }
nwnrs-key = { path = "crates/key" }
nwnrs-lru = { path = "crates/lru" }
nwnrs-masterlist = { path = "crates/masterlist" }
nwnrs-mdl = { path = "crates/mdl" }
nwnrs-mtr = { path = "crates/mtr" }
nwnrs-nwscript = { path = "crates/nwscript" }
nwnrs-nwsync = { path = "crates/nwsync" }
nwnrs-plt = { path = "crates/plt" }
nwnrs-resdir = { path = "crates/resdir" }
nwnrs-resfile = { path = "crates/resfile" }
nwnrs-resman = { path = "crates/resman" }
nwnrs-resmemfile = { path = "crates/resmemfile" }
nwnrs-resnwsync = { path = "crates/resnwsync" }
nwnrs-resref = { path = "crates/resref" }
nwnrs-restype = { path = "crates/restype" }
nwnrs-set = { path = "crates/set" }
nwnrs-ssf = { path = "crates/ssf" }
nwnrs-streamext = { path = "crates/streamext" }
nwnrs-tga = { path = "crates/tga" }
nwnrs-tlk = { path = "crates/tlk" }
nwnrs-txi = { path = "crates/txi" }
nwnrs-twoda = { path = "crates/twoda" }
nwnrs-util = { path = "crates/util" }
# external dependencies
argh = { version = "0.1.19", default-features = false, features = ["help"] }
bevy = "0.18.1"
bevy_egui = "0.39.1"
codepage = { version = "0.1.2", default-features = false }
encoding_rs = { version = "0.8.35", default-features = false, features = [
    "alloc",
] }
flate2 = { version = "1.1.9", default-features = false, features = [
    "rust_backend",
] }
image = { version = "0.25.8", default-features = false, features = [
    "jpeg",
    "png",
    "tga",
    "webp",
] }
indexmap = { version = "2.14.0", default-features = false }
md5 = { version = "0.8.0", default-features = false }
reqwest = { version = "0.13.2", default-features = false, features = [
    "json",
    "rustls",
] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
serde-wasm-bindgen = { version = "0.6.5", default-features = false, features = [
] }
sha1 = { version = "0.11.0", default-features = false }
tracing = { version = "0.1.44", default-features = false, features = [
    "attributes",
    "std",
] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
tokio = { version = "1.51.1", features = ["full"] }
texpresso = { version = "2.0.2", default-features = false }
wasm-bindgen = { version = "0.2.117", default-features = false, features = [
    "std",
] }
wasm-bindgen-test = { version = "0.3.50" }
zstd = { version = "0.13.3", default-features = false, features = [
    "arrays",
    "legacy",
    "zdict_builder",
] }

[workspace.lints.clippy]
# Baseline safety + cleanup
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
too_many_arguments = "allow"
# Correctness / robustness
indexing_slicing = "warn"
map_err_ignore = "warn"
result_large_err = "warn"
mem_forget = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
# Readability / style
manual_ok_or = "warn"
let_and_return = "warn"
match_like_matches_macro = "warn"
needless_borrow = "warn"
unused_async = "warn"
unused_unit = "warn"
semicolon_if_nothing_returned = "warn"
print_stdout = "deny"
print_stderr = "deny"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "deny"
