[workspace]
default-members = ["crates/nwnrs"]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
publish = true
license = "GPL-3.0-only"
repository = "https://github.com/urothis/nwnrs"
homepage = "https://github.com/urothis/nwnrs"

[workspace.dependencies]
argh = { version = "0.1", default-features = false, features = ["help"] }
base64 = { version = "0.22", default-features = false, features = ["std"] }
codepage = { version = "0.1", default-features = false }
cc = { version = "1.2", default-features = false }
encoding_rs = { version = "0.8", default-features = false, features = [
    "alloc",
] }
flate2 = { version = "1.1", default-features = false, features = [
    "rust_backend",
] }
frida-gum-sys = { version = "0.17.2", default-features = false, features = [
    "auto-download",
] }
image = { version = "0.25", default-features = false, features = [
    "jpeg",
    "png",
    "tga",
    "webp",
] }
indexmap = { version = "2.14", default-features = false }
md5 = { version = "0.8", default-features = false }
nix = { version = "0.30", default-features = false, features = ["signal"] }
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "rustls",
] }
rusqlite = { version = "0.40", default-features = false, features = [
    "bundled",
] }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "std",
] }
serde_json = { version = "1.0", default-features = false, features = [
    "preserve_order",
] }
serde-wasm-bindgen = { version = "0.6", default-features = false, features = [
] }
sha1 = { version = "0.11", default-features = false }
sha2 = { version = "0.11", default-features = false }
tracing = { version = "0.1", default-features = false, features = [
    "attributes",
    "std",
] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "ansi",
    "env-filter",
    "fmt",
] }
tokio = { version = "1.52", default-features = false, features = ["full"] }
texpresso = { version = "2.0", default-features = false }
toml = { version = "1.1" }
winreg = { version = "0.56", default-features = false }
windows-sys = { version = "0.61", default-features = false }
zstd = { version = "0.13", default-features = false, features = [
    "arrays",
    "legacy",
    "zdict_builder",
] }

[workspace.lints.clippy]
# Baseline safety + cleanup
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
too_many_arguments = "allow"
# Correctness / robustness
indexing_slicing = "warn"
map_err_ignore = "warn"
result_large_err = "warn"
mem_forget = "warn"
cast_lossless = "warn"
cast_possible_truncation = "warn"
# Readability / style
manual_ok_or = "warn"
let_and_return = "warn"
match_like_matches_macro = "warn"
needless_borrow = "warn"
unused_async = "warn"
unused_unit = "warn"
semicolon_if_nothing_returned = "warn"
print_stdout = "deny"
print_stderr = "deny"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "deny"
