[package]
name = "nwnrs-cli"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
argh.workspace = true
nwnrs-checksums.workspace = true
nwnrs-compressedbuf.workspace = true
nwnrs-erf.workspace = true
nwnrs-exo.workspace = true
nwnrs-gff.workspace = true
nwnrs-gffjson.workspace = true
nwnrs-key.workspace = true
nwnrs-game.workspace = true
nwnrs-nwsync.workspace = true
nwnrs-resman.workspace = true
nwnrs-resnwsync.workspace = true
nwnrs-resref.workspace = true
nwnrs-ssf.workspace = true
nwnrs-tlk.workspace = true
nwnrs-twoda.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
nwnrs-restype.workspace = true

[lints]
workspace = true
