[package]
name = "nwnrs-cli"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
argh.workspace = true
image.workspace = true
nwnrs.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
