[package]
name = "nwnrs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true
description = "Command-line inspection, conversion, packing, unpacking, and NWScript tooling for Neverwinter Nights resources"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/nwnrs-cli"
readme = "README.md"
keywords = ["nwn", "neverwinter-nights", "cli", "gff", "nwscript"]
categories = ["command-line-utilities", "parser-implementations", "game-development"]

[dependencies]
argh.workspace = true
image.workspace = true
nwnrs.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
nwnrs-test-support = { path = "../crates/foundation/test-support" }

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = [
    "-Zunstable-options",
    "--generate-link-to-definition",
    "--generate-macro-expansion",
]
