[package]
name = "nwnrs-wasm"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
nwnrs.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen.workspace = true

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test.workspace = true

[lints]
workspace = true
