[package]
name = "nwnrs-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "WebAssembly DTO bindings for Neverwinter Nights resource formats"
repository.workspace = true
homepage.workspace = true
readme = "README.md"
exclude = ["pkg/**"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nwnrs.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
nwnrs-test-support = { path = "../crates/foundation/test-support" }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = [
    "-Zunstable-options",
    "--generate-link-to-definition",
    "--generate-macro-expansion",
]
