[package]
name = "nwnrs-dds"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Typed Neverwinter Nights DDS parser, decoder, writer, and RGBA encoder"

[dependencies]
nwnrs-resman.workspace = true
nwnrs-restype.workspace = true
texpresso.workspace = true
tracing.workspace = true

[lints]
workspace = true
