[package]
name = "nwnrs-game"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
nwnrs-erf.workspace = true
nwnrs-key.workspace = true
nwnrs-resman.workspace = true
nwnrs-resdir.workspace = true
nwnrs-resnwsync.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
nwnrs-checksums.workspace = true
nwnrs-compressedbuf.workspace = true
nwnrs-exo.workspace = true
nwnrs-resref.workspace = true
nwnrs-restype.workspace = true
rusqlite.workspace = true

[lints]
workspace = true
