[package]
name = "nwn-gffjson"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
nwn-gff.workspace = true
nwn-core.workspace = true
nwn-util.workspace = true
serde_json.workspace = true
tracing.workspace = true

[lints]
workspace = true
