[package]
name = "nwnrs-gffjson"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
nwnrs-gff.workspace = true
nwnrs-core.workspace = true
nwnrs-util.workspace = true
serde_json.workspace = true
tracing.workspace = true

[lints]
workspace = true
