[package]
name = "nwn-key"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
indexmap.workspace = true
nwn-checksums.workspace = true
nwn-compressedbuf.workspace = true
nwn-exo.workspace = true
nwn-resman.workspace = true
nwn-resref.workspace = true
nwn-restype.workspace = true
nwn-util.workspace = true
tracing.workspace = true

[lints]
workspace = true
