[package]
name = "nwnrs-mdl"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
nwnrs-resman.workspace = true
nwnrs-resref.workspace = true
nwnrs-restype.workspace = true
tracing.workspace = true

[dev-dependencies]
nwnrs-resmemfile.workspace = true

[lints]
workspace = true
