[package]
name = "nwnrs-mtr"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Typed Neverwinter Nights MTR parser and writer for material-texture resolution"

[dependencies]
nwnrs-resman.workspace = true
nwnrs-restype.workspace = true
tracing.workspace = true

[lints]
workspace = true
