[package]
name = "nwnrs"
version = "0.0.2"
edition.workspace = true
license.workspace = true
publish = true
description = "Command-line inspection, conversion, packing, unpacking, and NWScript tooling for Neverwinter Nights resources"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/nwnrs"
readme = "README.md"
keywords = ["nwn", "neverwinter-nights", "cli", "gff", "nwscript"]
categories = [
    "command-line-utilities",
    "parser-implementations",
    "game-development",
]

[dependencies]
argh.workspace = true
image.workspace = true
nwnrs-nwpkg = { package = "nwnrs-nwpkg", path = "../nwpkg", version = "0.0.2" }
nwnrs-nwscript = { package = "nwnrs-nwscript", path = "../nwscript", version = "0.0.2" }
nwnrs-types = { package = "nwnrs-types", path = "../types", version = "0.0.2" }
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = [
    "-Zunstable-options",
    "--generate-link-to-definition",
    "--generate-macro-expansion",
]
