[package]
name = "nwnrs"
version = "0.0.1"
edition.workspace = true
license.workspace = true
publish = true
description = "Command-line inspection, conversion, packing, unpacking, and NWScript tooling for Neverwinter Nights resources"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/nwnrs"
readme = "README.md"
keywords = ["nwn", "neverwinter-nights", "cli", "gff", "nwscript"]
categories = [
    "command-line-utilities",
    "parser-implementations",
    "game-development",
]

[features]
default = ["supervisor", "tooling"]
supervisor = ["dep:nix", "dep:nwnrs-runtime", "dep:tokio"]
tooling = [
    "dep:image",
    "dep:nwnrs-nwpkg",
    "dep:nwnrs-nwscript",
    "dep:nwnrs-types",
    "dep:reqwest",
    "dep:tokio",
]

[dependencies]
argh.workspace = true
image = { workspace = true, optional = true }
nwnrs-nwpkg = { package = "nwnrs-nwpkg", path = "../nwpkg", version = "0.0.1", optional = true }
nwnrs-nwscript = { package = "nwnrs-nwscript", path = "../nwscript", version = "0.0.1", optional = true }
nwnrs-runtime = { path = "../runtime", version = "0.0.1", optional = true }
nwnrs-types = { package = "nwnrs-types", path = "../types", version = "0.0.1", optional = true }
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, optional = true }

[dev-dependencies]
toml.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = [
    "-Zunstable-options",
    "--generate-link-to-definition",
    "--generate-macro-expansion",
]
