[package]
name = "nwnrs-nwscript"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
nwnrs-restype.workspace = true
nwnrs-util.workspace = true
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
