[package]
name = "nwn-nwsync"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
nwn-checksums.workspace = true
nwn-resref.workspace = true
nwn-restype.workspace = true
nwn-streamext.workspace = true
tracing.workspace = true

[lints]
workspace = true
