[package]
name = "nwnrs-plt"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Typed Neverwinter Nights PLT parser and writer with explicit value/layer pixels"

[dependencies]
nwnrs-resman.workspace = true
nwnrs-restype.workspace = true
tracing.workspace = true

[lints]
workspace = true
