[package]
name = "nwnrs"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
nwnrs-checksums.workspace = true
nwnrs-compressedbuf.workspace = true
nwnrs-core.workspace = true
nwnrs-dds.workspace = true
nwnrs-erf.workspace = true
nwnrs-exo.workspace = true
nwnrs-gff.workspace = true
nwnrs-key.workspace = true
nwnrs-lru.workspace = true
nwnrs-masterlist.workspace = true
nwnrs-mdl.workspace = true
nwnrs-nwscript.workspace = true
nwnrs-nwsync.workspace = true
nwnrs-plt.workspace = true
nwnrs-resdir.workspace = true
nwnrs-resfile.workspace = true
nwnrs-resman.workspace = true
nwnrs-resmemfile.workspace = true
nwnrs-resnwsync.workspace = true
nwnrs-resref.workspace = true
nwnrs-restype.workspace = true
nwnrs-ssf.workspace = true
nwnrs-streamext.workspace = true
nwnrs-tga.workspace = true
nwnrs-tlk.workspace = true
nwnrs-twoda.workspace = true
nwnrs-util.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
nwnrs-game.workspace = true

[lints]
workspace = true
