[package]
name = "nwnrs-renderer"
version = "0.0.1"
edition.workspace = true
publish = true
license.workspace = true
description = "Renderer-neutral NWN scene assembly and GPU transport preparation"
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
nwnrs-types = { path = "../types", version = "0.0.1" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[lints]
workspace = true
