[package]
name = "nwn-resfile"
version.workspace = true
edition.workspace = true
publish.workspace = true


[dependencies]
nwn-checksums.workspace = true
nwn-exo.workspace = true
nwn-resman.workspace = true
nwn-resref.workspace = true
nwn-restype.workspace = true
tracing.workspace = true

[lints]
workspace = true
