[package]
name = "nwnrs-resman"
version.workspace = true
edition.workspace = true
publish.workspace = true


[dependencies]
nwnrs-checksums.workspace = true
nwnrs-compressedbuf.workspace = true
nwnrs-exo.workspace = true
nwnrs-lru.workspace = true
nwnrs-resref.workspace = true
nwnrs-restype.workspace = true
nwnrs-util.workspace = true
tracing.workspace = true

[lints]
workspace = true
