[package]
name = "nwnrs-resnwsync"
version.workspace = true
edition.workspace = true
publish.workspace = true


[dependencies]
indexmap.workspace = true
rusqlite.workspace = true
nwnrs-checksums.workspace = true
nwnrs-compressedbuf.workspace = true
nwnrs-exo.workspace = true
nwnrs-resman.workspace = true
nwnrs-resref.workspace = true
nwnrs-restype.workspace = true
tracing.workspace = true

[lints]
workspace = true
