[package]
name = "nwnrs-runtime"
version = "0.0.1"
edition.workspace = true
license.workspace = true
publish = true
description = "Safe runtime configuration and target-pack selection for nwnrs"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/nwnrs-runtime"
readme = "README.md"
keywords = ["nwn", "neverwinter-nights", "runtime"]
categories = ["game-development"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
toml.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = [
    "-Zunstable-options",
    "--generate-link-to-definition",
    "--generate-macro-expansion",
]
