[package]
name = "nwnrs-tga"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Typed Neverwinter Nights TGA parser, decoder, writer, and RGBA encoder"

[dependencies]
nwnrs-resman.workspace = true
nwnrs-restype.workspace = true
tracing.workspace = true

[lints]
workspace = true
