[package]
name = "nwn-tlk"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
nwn-core.workspace = true
nwn-lru.workspace = true
nwn-resman.workspace = true
tracing.workspace = true
nwn-util.workspace = true

[lints]
workspace = true
