[package]
name = "nwnrs-tlk"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
nwnrs-core.workspace = true
nwnrs-lru.workspace = true
nwnrs-resman.workspace = true
tracing.workspace = true
nwnrs-util.workspace = true

[lints]
workspace = true
