[package]
name = "nwnrs-txi"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
description = "Typed parser for Neverwinter Nights texture info TXI resources"

[dependencies]
nwnrs-resman.workspace = true
nwnrs-resref.workspace = true
nwnrs-restype.workspace = true
tracing.workspace = true

[dev-dependencies]
nwnrs-resmemfile.workspace = true

[lints]
workspace = true
