[package]
name = "nwnrs-types"
version = "0.0.2"
edition.workspace = true
publish = true
license.workspace = true
description = "Neverwinter Nights typed formats, resource systems, and tooling helpers"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/nwnrs-types"
readme = "README.md"

[features]
default = [
    "checksums",
    "compressedbuf",
    "dds",
    "encoding",
    "erf",
    "exo",
    "gff",
    "install",
    "io",
    "key",
    "localization",
    "lru",
    "masterlist",
    "mdl",
    "mtr",
    "nwsync",
    "plt",
    "resman",
    "set",
    "ssf",
    "streamext",
    "tga",
    "tlk",
    "twoda",
    "txi",
]
checksums = ["dep:md5", "dep:sha1"]
compressedbuf = ["io", "dep:flate2", "dep:zstd"]
dds = ["resman", "dep:texpresso"]
encoding = ["dep:codepage", "dep:encoding_rs"]
erf = [
    "checksums",
    "compressedbuf",
    "encoding",
    "exo",
    "io",
    "resman",
    "dep:indexmap",
]
exo = []
gff = ["encoding", "io", "localization", "resman"]
install = ["checksums", "erf", "key", "nwsync", "resman", "dep:serde", "dep:serde_json"]
io = ["dep:serde"]
key = ["checksums", "compressedbuf", "exo", "resman", "dep:indexmap"]
localization = []
lru = []
masterlist = ["dep:reqwest", "dep:serde", "dep:serde_json"]
mdl = ["gff", "resman", "twoda"]
mtr = ["resman"]
nwsync = ["checksums", "compressedbuf", "exo", "resman", "dep:indexmap", "dep:rusqlite"]
plt = ["resman"]
resman = ["checksums", "compressedbuf", "exo", "io", "lru", "dep:indexmap", "dep:serde"]
set = ["resman"]
ssf = ["io", "localization", "dep:serde"]
streamext = []
tga = ["resman"]
tlk = ["encoding", "io", "localization", "lru", "resman"]
twoda = ["encoding", "resman"]
txi = ["resman"]

[dependencies]
codepage = { workspace = true, optional = true }
encoding_rs = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
indexmap = { workspace = true, optional = true }
md5 = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
sha1 = { workspace = true, optional = true }
texpresso = { workspace = true, optional = true }
tracing.workspace = true
zstd = { workspace = true, optional = true }

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
rustdoc-args = [
    "-Zunstable-options",
    "--generate-link-to-definition",
    "--generate-macro-expansion",
]
